k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paas-platform
  labels:
    name: paas-platform
    environment: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: core-services
  labels:
    name: core-services
    environment: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: otelagent
  labels:
    name: otelagent
    environment: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: otel-gateway
  labels:
    name: otel-gateway
    environment: development
